# rusty_ai

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: Cargo.toml  example_bench.rs
benches/src/: constants.rs  lib.rs  macros.rs
benchmarks/: Cargo.toml
benchmarks/src/: constants.rs  lib.rs  macros.rs  matrix.rs
benchmarks/src/const_matrix/: max_col_width.rs  mul.rs  new_random.rs
benchmarks/src/layer/: calculate.rs  mod.rs
benchmarks/src/matrix/: max_col_width.rs  mod.rs  mul.rs  new_random.rs
const_tensor/: Cargo.toml
const_tensor/benches/: matrix.rs
const_tensor/src/: aliases.rs  arr_wrapper.rs  container.rs  data.rs  element.rs  interface.rs  lib.rs  macros.rs  maybe_uninit.rs  multidim_arr.rs  multidimensional.rs  owned.rs  serde_wrapper.rs  shape.rs  shape_data.rs  tensor.rs  tests.rs
examples/: Cargo.toml  export.rs  index.js  mnist.rs  mnist_nllloss.rs  xor.rs
examples-bak/: Cargo.toml  README  out.js
examples-bak/basic_ai/: index.js
examples-bak/pytorch_sine_simple/: Cargo.toml
examples-bak/sine/: Cargo.toml
examples-bak/sine/src/: main.rs
examples-bak/xor/src/: main.rs
examples/basic_ai/: Cargo.toml  index.js  out.js
examples/basic_ai/src/: args.rs  main.rs
examples/examples/: sine.rs
examples/export/: Cargo.toml
examples/export/examples/: export.rs
examples/export/src/: lib.rs
examples/mnist/: Cargo.toml
examples/mnist/examples/: mnist.rs
examples/mnist/src/: lib.rs
examples/mnist_nllloss/: .gitignore  Cargo.toml
examples/mnist_nllloss/src/: lib.rs  main.rs
examples/mnist_util/: Cargo.toml
examples/mnist_util/src/: lib.rs
examples/pytorch_sine_simple/src/: main.rs
examples/sine/: Cargo.toml  index.html  main.rs  out.js
examples/sine/src/: lib.rs  main.rs
examples/xor/: Cargo.toml
matrix/: Cargo.toml
matrix/benches/: benches.rs
matrix/src/: element.rs  iter_rows.rs  lib.rs  number.rs  ring.rs  util.rs
rusty_ai/: Cargo.toml
rusty_ai/src/: activation_function.rs  bias.rs  builder.rs  clip_gradient_norm.rs  const_matrix.rs  data.rs  data_list.rs  error_function.rs  export.rs  initializer.rs  input.rs  layer.rs  lib.rs  loss_function.rs  matrix.rs  neural_network.rs  norm.rs  optimizer.rs  prelude.rs  propagation.rs  propagator.rs  results.rs  training.rs  traits.rs  util.rs
rusty_ai/src/activation_function/: mod.rs  sigmoid.rs  softmax.rs
rusty_ai/src/data/: builder.rs  mod.rs  pair.rs  pair_list.rs  value_list.rs
rusty_ai/src/gradient/: aliases.rs  layer.rs  mod.rs
rusty_ai/src/layer/: add_bias.rs  bias.rs  builder.rs  input.rs  mod.rs  normal.rs  output.rs
rusty_ai/src/layer/builder/: mod.rs
rusty_ai/src/layer/builder/marker/: bias.rs  mod.rs  weights.rs
rusty_ai/src/neural_network/: builder.rs  mod.rs  network.rs  neural_network.rs  trainable.rs
rusty_ai/src/neural_network/trainable/: benches.rs
rusty_ai/src/optimizer/: adam.rs  gradient_descent.rs  mod.rs  sgd.rs
rusty_ai/src/results/: gradient_layer.rs  mod.rs  propagation.rs
rusty_ai/src/trainable/: benches.rs  builder.rs  mod.rs
rusty_ai/src/trainer/: benches.rs  builder.rs  mod.rs
rusty_ai/src/traits/: iter.rs  mod.rs  propagator.rs  trainable.rs
rusty_ai/src/util/: assign_each.rs  entrywise_arithmetic.rs  lerp.rs  macros.rs  mod.rs  norm.rs  random.rs  rng.rs  scalar_arithmetic.rs
src/: bias.rs  clip_gradient_norm.rs  initializer.rs  input.rs  layer.rs  lib.rs  loss_function.rs  norm.rs  pair.rs  propagation.rs  reexport.rs  test_result.rs  test_util.rs  util.rs
src/activation_function/: mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/data/: builder.rs  mod.rs  pair_list.rs  value_list.rs
src/gradient/: aliases.rs  layer.rs  mod.rs
src/neural_network/: builder.rs  mod.rs
src/nn/: builder.rs  component.rs  flatten.rs  head.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/optimizer/: adam.rs  mod.rs  sgd.rs
src/trainer/: benches.rs  builder.rs  mod.rs
src/training/: mod.rs  single_threaded.rs  with_rayon.rs
src/traits/: iter.rs
src/util/: entrywise_arithmetic.rs  lerp.rs  mod.rs  rng.rs
tests/: Cargo.toml  pytorch_sine.rs  pytorch_xor.rs
tests/pytorch/: sine.rs  xor.rs
tests/src/: lib.rs
tests/tests/pytorch/: sine.rs  xor.rs
