[workspace]
resolver = "2"
members = [
    "rusty_ai",
    "matrix",

    # ---
    "examples",
    "tests",
    "benches",
]
exclude = []

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
rusty_ai = { path = "./rusty_ai" }
matrix = { path = "./matrix" }

anyhow = "1.0.9"
derive_more = "0.99"
enum_dispatch = "0.3.11"
itertools = "0.11.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.44"
