[workspace]
resolver = "2"
members = ["matrix"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# workspace members
rusty_ai = { path = "." }
matrix = { path = "./matrix" }

# dependencies
anyhow = "1.0.9"
derive_more = "0.99"
# itertools = "0.12.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
#thiserror = "1.0.44"

# for examples
mnist_util = { path = "./examples/mnist_util" }

[package]
name = "rusty_ai"
edition.workspace = true
version.workspace = true

[dependencies]
matrix.workspace = true
anyhow.workspace = true
derive_more.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true

[dev-dependencies]
# rayon = "1.7.0"
spmc = "0.3.0"

# for examples
mnist_util.workspace = true
serde_json = "1.0"
