[workspace]
resolver = "2"
members = ["const_tensor"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# workspace members
rusty_ai = { path = "." }
const_tensor = { path = "./const_tensor" }

# dependencies
anyhow = "1.0.9"
derive_more = "0.99"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
inline_closure = { git = "https://github.com/Qwox0/inline_closure" }
# itertools = "0.12.0"
num = "0.4"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
#thiserror = "1.0.44"

# for examples
mnist_util = { path = "./examples/mnist_util" }

[package]
name = "rusty_ai"
edition.workspace = true
version.workspace = true

[dependencies]
const_tensor.workspace = true

anyhow.workspace = true
derive_more.workspace = true
half.workspace = true
inline_closure.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true

[dev-dependencies]
# rayon = "1.7.0"
spmc = "0.3.0"

# for examples
mnist_util.workspace = true
serde_json = "1.0"
