[package]
name = "rusty_ai"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
enum_dispatch = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rayon = "1.7.0"
spmc = "0.3.0"
