[package]
name = "rusty_ai"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
enum_dispatch = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rayon = "1.7.0"
spmc = "0.3.0"
