[package]
name = "rusty_ai"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
derive_more.workspace = true
itertools.workspace = true
enum_dispatch.workspace = true
rand.workspace = true
rand_distr.workspace = true

[dev-dependencies]
rayon = "1.7.0"
spmc = "0.3.0"
