[package]
name = "tests"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_ai = { path = "../rusty_ai" }

[[test]]
name = "pytorch_sine"
path = "./pytorch/sine.rs"

[[test]]
name = "pytorch_xor"
path = "./pytorch/xor.rs"
