[package]
name = "tests"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_ai = { path = "../rusty_ai" }

[[test]]
name = "pytorch"
path = "./tests/pytorch/mod.rs"

# [[test]]
# name = "pytorch_sine"
# path = "./tests/pytorch/sine.rs"
#
# [[test]]
# name = "pytorch_sine2"
# path = "./tests/pytorch_sine2.rs"
#
# [[test]]
# name = "pytorch_xor"
# path = "./tests/pytorch/xor.rs"
