[package]
name = "export"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_ai.workspace = true
serde.workspace = true
serde_json = { version = "1.0", features = [
    "float_roundtrip", # ensures correct float parsing at a 2x performace cost
] }
